[gd_scene load_steps=6 format=2]

[ext_resource path="res://KinematicBody2D_slacker.tscn" type="PackedScene" id=1]
[ext_resource path="res://Worker.gd" type="Script" id=2]
[ext_resource path="res://Worker.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "waiting"
tracks/0/type = "value"
tracks/0/path = NodePath("slacker:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=2]
resource_name = "working"
tracks/0/type = "value"
tracks/0/path = NodePath("slacker:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[node name="Worker" index="0" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="slacker" parent="." index="1"]
position = Vector2( 0.155098, 3.00001 )
texture = ExtResource( 3 )
vframes = 3
frame = 2

[node name="AnimationPlayer_slacker" parent="." index="2"]
anims/waiting = SubResource( 1 )
anims/working = SubResource( 2 )

[node name="Label_money" parent="." index="3"]
margin_left = -40.0
margin_right = 0.0

[node name="Label2" parent="Label_money" index="0"]
margin_left = 56.1551
margin_right = 75.1551

[node name="TextureRect" parent="Label_money" index="1"]
margin_left = 43.8658
margin_top = 2.75656
margin_right = 83.8658
margin_bottom = 42.7566

[node name="Label_ore" parent="." index="4"]
margin_left = -40.0
margin_right = 0.0

[node name="TextureRect" parent="Label_ore" index="0"]
margin_left = 43.8658
margin_top = 2.00002
margin_right = 86.8658
margin_bottom = 43.0001

[node name="Label_candy" parent="." index="5"]
margin_left = -40.0
margin_right = 0.0

[node name="TextureRect" parent="Label_candy" index="0"]
margin_left = 42.0
margin_right = 106.0

[node name="Label_after_taxes" parent="." index="7"]
margin_left = -40.0
margin_right = 0.0

[node name="TextureRect2" parent="Label_after_taxes" index="0"]
margin_left = 43.8658
margin_top = 3.00002
margin_right = 83.8658
margin_bottom = 43.0001

[node name="Label" parent="Label_after_taxes" index="1"]
margin_left = 56.1551
margin_right = 75.1551
margin_bottom = 14.0

[node name="Button_pay_taxes" parent="." index="8"]
margin_left = 57.7016
margin_right = 129.702

[node name="Button_buy_candies" parent="." index="9"]
margin_left = 60.0
margin_top = -77.4
margin_right = 149.0
margin_bottom = -54.4

[node name="Button_sell_ore" parent="." index="10"]
margin_left = 60.0
margin_right = 120.0

[node name="Button_work" type="Button" parent="." index="11"]
margin_left = 50.0
margin_top = -27.0
margin_right = 100.0
margin_bottom = 13.0
rect_scale = Vector2( 1.3, 1.3 )
text = "Work"

[node name="Timer_work" type="Timer" parent="." index="12"]
wait_time = 1.5

[node name="CheckButton_auto_work" type="CheckButton" parent="." index="13"]
margin_left = -40.0
margin_top = 25.0
margin_right = 110.0
margin_bottom = 65.0
rect_scale = Vector2( 2, 2 )
hint_tooltip = "Auto work. When activated, the worker will automatically work, even if the Work button is not pressed."
text = "Auto work:"

[node name="Label" parent="." index="14"]
margin_left = -10.0
margin_right = 40.0
margin_bottom = -23.0
text = "Worker"
[connection signal="pressed" from="Button_work" to="." method="_on_Button_work_pressed"]
